src/ConstantFolding/targets/P.g4
grammar P;

r:
    t+ EOF
;

t:
    T0
    | T1
    | T2
    | T3
    | T4
    | T5
    | T6
    | T7
    | T8
    | T9
    | T10
    | T11
    | T12
    | T13
    | T14
    | T15
    | T16
    | T17
    | T18
    | T19
    | T20
    | T21
    | T22
    | T23
    | T24
    | T25
    | T26
    | T27
    | T28
    | T29
    | T30
    | T31
    | T32
    | T33
    | T34
    | T35
    | T36
    | T37
    | T38
    | T39
    | T40
    | T41
    | T42
    | T43
    | T44
    | T45
    | T46
    | T47
    | T48
    | T49
    | T50
    | T51
    | T52
    | T53
    | T54
    | T55
    | T56
    | T57
    | T58
    | T59
    | T60
    | T61
    | T62
    | T63
;

T0:
    'T0'
;

T1:
    'T1'
;

T2:
    'T2'
;

T3:
    'T3'
;

T4:
    'T4'
;

T5:
    'T5'
;

T6:
    'T6'
;

T7:
    'T7'
;

T8:
    'T8'
;

T9:
    'T9'
;

T10:
    'T10'
;

T11:
    'T11'
;

T12:
    'T12'
;

T13:
    'T13'
;

T14:
    'T14'
;

T15:
    'T15'
;

T16:
    'T16'
;

T17:
    'T17'
;

T18:
    'T18'
;

T19:
    'T19'
;

T20:
    'T20'
;

T21:
    'T21'
;

T22:
    'T22'
;

T23:
    'T23'
;

T24:
    'T24'
;

T25:
    'T25'
;

T26:
    'T26'
;

T27:
    'T27'
;

T28:
    'T28'
;

T29:
    'T29'
;

T30:
    'T30'
;

T31:
    'T31'
;

T32:
    'T32'
;

T33:
    'T33'
;

T34:
    'T34'
;

T35:
    'T35'
;

T36:
    'T36'
;

T37:
    'T37'
;

T38:
    'T38'
;

T39:
    'T39'
;

T40:
    'T40'
;

T41:
    'T41'
;

T42:
    'T42'
;

T43:
    'T43'
;

T44:
    'T44'
;

T45:
    'T45'
;

T46:
    'T46'
;

T47:
    'T47'
;

T48:
    'T48'
;

T49:
    'T49'
;

T50:
    'T50'
;

T51:
    'T51'
;

T52:
    'T52'
;

T53:
    'T53'
;

T54:
    'T54'
;

T55:
    'T55'
;

T56:
    'T56'
;

T57:
    'T57'
;

T58:
    'T58'
;

T59:
    'T59'
;

T60:
    'T60'
;

T61:
    'T61'
;

T62:
    'T62'
;

T63:
    'T63'
;

WS:
    [ ]+ -> skip
;
